# dnsserver

./: CMakeLists.txt  PacketBuffer.cpp  PacketBuffer.h  PacketHeader.cpp  PacketHeader.h  ResourceRecord.cpp  ResourceRecord.h  main.cpp
tests/: query_packet.txt  response_packet.txt  test_packerheader.cpp  test_packetbuffer.cpp
